--- a/vpn-dlya-whatsapp-na-iphone-chtoby-vsyo-letalo-a-ne-gruzilos-vechnost.html
+++ b/vpn-dlya-whatsapp-na-iphone-chtoby-vsyo-letalo-a-ne-gruzilos-vechnost.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+    <meta name="yandex-verification" content="b7d8d882c40f67fe" />
+    <meta name="google-site-verification" content="pbYzfXOmhDc57hZ2umec9Gh7T_7I-yMsb-aCqUUEvwU" />
     <meta name="description" content="Подключите VPN для WhatsApp на iPhone и обеспечьте безопасность и стабильность подключения.">
     <meta name="keywords" content="">
     <title>VPN для WhatsApp на iPhone — защита и безопасность</title>
@@ -931,6 +933,19 @@
       </div>
     </footer>
     <script src="./js/main.js"></script>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function(m,e,t,r,i,k,a){
+        m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+    })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=103847187', 'ym');
+
+    ym(103847187, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/103847187" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 		</body>
 		</html>
